--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "devDependencies": {
         "axios": "^0.19",
         "cross-env": "^7.0",
+        "eslint": "^7.15.0",
+        "eslint-config-google": "^0.14.0",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
         "resolve-url-loader": "^3.1.0"
